increase spacing between checkboxes and radios button elements. Also, correct spelling error and change the border of my submit button

--- a/survey.css
+++ b/survey.css
@@ -69,14 +69,15 @@ input[type="checkbox"],input[type="radio"]
 
 .button-submit{
     display: block;
+
     width: 100%;
     height: 2.375rem;
     padding: 0.375rem 0.75rem;
     color: #f3f3f3;
+    border-radius: 10px;
     background-color: #37af65;
     background-clip: padding-box;
     border: 1px solid #ced4da;
-    border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -106,4 +107,7 @@ input[type="checkbox"],input[type="radio"]
 
 .padding{
     margin-top: 15px;
+}
+.margin{
+    margin-top: 20px;
 }
